# systematic-review-extractor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPLETE_EXTRACTION_REPORT.json  COMPLETE_SYSTEM_SUMMARY.md  ENHANCED_FEATURES.md  EXTRACTION_SUMMARY.txt  LICENSE  README.md  USER_GUIDE.md  demo.html  demo_advanced.html  demo_evidence_traceability.html  dewan2018_extraction_report.html  evidence_traceability_system.py  extract_dewan_clinical_data.py  generate_complete_report.py  install_dependencies.sh  meta_analysis_complete_demo.html  meta_analysis_extractor.py  multi_model_validator.py  process_dewan2018.py  pyproject.toml  real_pdf_processor.py  requirements-dev.txt  requirements.txt  run_now.py  sample_template.json  setup.sh  setup_and_run.sh  systematic_review_pipeline.py  test_enhanced_system.py  test_with_sample.py  test_your_own.html  validation_system.py  web_ui.py  working_pdf_extractor.py
.github/workflows/: ci.yml
dewan2018_clinical/: clinical_summary.json
examples/: example_extraction.py
examples/sample_papers/: sample_study_text.txt
final_test/: extraction_package.json
final_test/output/reports/: summary.txt
server/: README.md  ai_enhanced_extraction.py  bridge_http.py  database.py  enhanced_bridge.py  mcp_verified_extraction_server.py  requirements.txt  verified_extraction_system.py
systematic_review_extractor/: __init__.py  cli.py
systematic_review_extractor/core/: __init__.py  extractor.py
systematic_review_extractor/extractors/: __init__.py  ai_extractor.py  pdf_extractor.py
systematic_review_extractor/models/: __init__.py  schemas.py
systematic_review_extractor/utils/: __init__.py  config.py  exporters.py  validators.py
templates/: medical_rct_template.json  surgical_outcomes_template.json
tests/: conftest.py  test_extractor.py  test_models.py
web/: index.html  package.json
web/src/: App.jsx  EnhancedApp.jsx
